--- a/app/src/main/res/layout/new_credentials.xml
+++ b/app/src/main/res/layout/new_credentials.xml
@@ -28,14 +28,14 @@
         android:id="@+id/newName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/hint_vault_name" />
+        android:hint="@string/Vault__vault_name_hint" />
 
     <EditText
         android:id="@+id/stealth_keycode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/hint_password"
+        android:hint="@string/Vault__vault_password_hint"
         android:inputType="textPassword" />
 
     <EditText
@@ -43,6 +43,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/hint_confirm_password"
+        android:hint="@string/Vault__confirm_password_hint"
         android:inputType="textPassword" />
 </LinearLayout>
