--- a/app/src/main/res/menu/file_grid.xml
+++ b/app/src/main/res/menu/file_grid.xml
@@ -7,12 +7,12 @@
         android:id="@+id/action_add_file"
         android:icon="@drawable/ic_action_new"
         android:orderInCategory="1"
-        android:title="@string/action_add_file"
+        android:title="@string/action__add_file"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_switch_interface"
         android:icon="@drawable/ic_list"
         android:orderInCategory="10"
-        android:title="@string/action_switch_interface"
+        android:title="@string/action__switch_interface"
         app:showAsAction="ifRoom" />
 </menu>
