--- a/app/src/main/res/menu/list_vault.xml
+++ b/app/src/main/res/menu/list_vault.xml
@@ -7,6 +7,6 @@
         android:id="@+id/action_add_vault"
         android:icon="@drawable/ic_action_new"
         android:orderInCategory="1"
-        android:title="@string/action_add_vault"
+        android:title="@string/action__add_vault"
         app:showAsAction="ifRoom" />
 </menu>
