--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -5,17 +5,23 @@
         <item>Magissia The Dark Lady</item>
         <item>Bink Feed</item>
         <item>wimaen</item>
+        <item>jorge705</item>
+        <item>ediazrod</item>
     </string-array>
     <string-array name="Contributor__description">
         <item>Supportive user and active translator</item>
         <item>Magissia La Dame Noir /Магисья Темная Леди</item>
         <item>The dutch language is provided for you by XDA senior member @Bink Feed</item>
         <item>Professional translator and moderator for Clean Master and various projects</item>
+        <item>Kindly brings you the Spanish translation</item>
+        <item>Member on xda-Developers forum</item>
     </string-array>
     <string-array name="Contributor__links">
         <item>https://play.google.com/store/apps/developer?id=LeanWeb</item>
         <item>http://forum.xda-developers.com/member.php?u=4634775</item>
         <item>http://forum.xda-developers.com/member.php?u=5390562</item>
         <item>https://plus.google.com/+WimN_023/about</item>
+        <item>https://crowdin.com/profile/jorge705</item>
+        <item>http://forum.xda-developers.com/member.php?u=1265890</item>
     </string-array>
 </resources>
