--- a/app/src/main/res/layout/list_file.xml
+++ b/app/src/main/res/layout/list_file.xml
@@ -22,7 +22,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_paper">
 
-
     <RelativeLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -32,6 +31,7 @@
             android:id="@+id/tag"
             android:layout_width="fill_parent"
             android:layout_height="@dimen/divider_height"
+            android:layout_marginTop="@dimen/header_paper_height"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/margin_from_edge"
             android:paddingRight="@dimen/margin_from_edge"
@@ -39,32 +39,35 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/text_secondary" />
 
-
         <ListView
             android:id="@android:id/list"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@id/tag"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:animateLayoutChanges="true"
             android:choiceMode="multipleChoice"
+            android:clipToPadding="false"
             android:divider="@android:color/transparent"
             android:drawSelectorOnTop="true"
-            android:layoutMode="clipBounds" />
+            android:layoutMode="clipBounds"
+            android:paddingTop="@dimen/header_paper_and_divider_height" />
 
 
         <GridView
             android:id="@+id/gridView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@+id/tag"
             android:animateLayoutChanges="true"
             android:choiceMode="multipleChoice"
+            android:clipToPadding="false"
             android:columnWidth="120dp"
             android:divider="@android:color/transparent"
             android:drawSelectorOnTop="true"
             android:horizontalSpacing="0dp"
             android:layoutMode="clipBounds"
             android:numColumns="auto_fit"
+            android:paddingTop="@dimen/header_paper_and_divider_height"
             android:stretchMode="columnWidth"
             android:verticalSpacing="0dp" />
 
@@ -103,5 +106,24 @@
         android:layout_alignParentTop="true"
         android:indeterminate="true"
         android:visibility="gone" />
+
+    <FrameLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_paper_height"
+        android:background="@color/primary">
+
+        <TextView
+            android:id="@+id/actionBarTitle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/header_text_height"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="@dimen/list_item_text_from_margin"
+            android:layout_marginStart="@dimen/list_item_text_from_margin"
+            android:gravity="center_vertical"
+            android:text="@string/App__name"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_title_size" />
+    </FrameLayout>
 
 </RelativeLayout>
