--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,13 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
 
+
+    <dimen name="action_bar_height">56dp</dimen>
+    <dimen name="header_text_height">72dp</dimen>
+
+    <dimen name="header_paper_height">128dp</dimen>
+    <dimen name="header_paper_and_divider_height">176dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <!--determined by paper now-->
@@ -16,5 +23,6 @@
     <dimen name="margin_text_top">20dp</dimen>
     <dimen name="text_multiline_size">16sp</dimen>
 
+    <dimen name="text_title_size">20sp</dimen>
 
 </resources>
