fine-tuning timings and animations

--- a/app/src/main/res/anim/slide_down.xml
+++ b/app/src/main/res/anim/slide_down.xml
@@ -4,5 +4,7 @@
     <translate
         android:duration="@android:integer/config_shortAnimTime"
         android:fromYDelta="-100%"
-        android:toYDelta="0%" />
+        android:interpolator="@android:anim/decelerate_interpolator"
+        android:toYDelta="0%"
+        android:zAdjustment="top" />
 </set>
