--- a/app/src/main/res/anim/fadein.xml
+++ b/app/src/main/res/anim/fadein.xml
@@ -1,5 +1,6 @@
 <alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="@android:integer/config_shortAnimTime"
+    android:duration="@android:integer/config_mediumAnimTime"
     android:fromAlpha="0.0"
-    android:interpolator="@android:anim/decelerate_interpolator"
-    android:toAlpha="1.0" />
+    android:interpolator="@android:anim/accelerate_interpolator"
+    android:toAlpha="1.0"
+    android:zAdjustment="bottom" />
