--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -35,12 +35,12 @@
         <TextView
             android:id="@+id/actionBarTitle"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/header_text_height"
+            android:layout_height="@dimen/action_bar_height"
             android:layout_gravity="bottom"
             android:layout_marginLeft="@dimen/text_from_margin"
             android:layout_marginStart="@dimen/text_from_margin"
             android:gravity="center_vertical"
-            android:text="@string/App__name"
+            android:text="@string/Page_header__donation"
             android:textColor="@color/white"
             android:textSize="@dimen/text_title_size" />
     </FrameLayout>
