--- a/app/src/main/res/values-de/strings_settings.xml
+++ b/app/src/main/res/values-de/strings_settings.xml
@@ -17,34 +17,34 @@
     </string>
     <string name="Settings__credits">Mitwirkende</string>
     <string name="Settings__translators">Übersetzer</string>
-    <string name="Settings__cannot_move_vault">Safes können nicht verschoben werden</string>
-    <string name="Settings__cannot_move_vault_message">Safes können nicht in Unterordner verschoben werden. Dies würde Fehler zur Folge haben.</string>
-    <string name="Settings__move_vault">Mehr Safes</string>
+    <string name="Settings__cannot_move_vault">Tresore können nicht verschoben werden</string>
+    <string name="Settings__cannot_move_vault_message">Tresore können nicht in Unterordner verschoben werden. Dies würde Fehler zur Folge haben.</string>
+    <string name="Settings__move_vault">Tresore verschieben</string>
   <string name="move_message">Sind Sie sicher, dass Sie
     \n\n von: %1$s
     \n zu: %2$s verschieben wollen?</string>
-    <string name="Settings__moved_vault">Verschoben in: %s</string>
-    <string name="Error__files_exist">Bitte verwenden Sie einen leeren Ordner</string>
-    <string name="Error__files_exist_message">Bitte wählen Sie einen leeren Ordner für Ihre Safes, um die Integrität Ihrer Dateien zu garantieren.</string>
+    <string name="Settings__moved_vault">Verschoben nach: %s</string>
+    <string name="Error__files_exist">Bitte leeren Ordner verwenden</string>
+    <string name="Error__files_exist_message">Für die Integrität der Dateien bitte einen leeren Ordner als Speicherort der Tresore wählen.</string>
     <string name="Settings__legal">Impressum</string>
-    <string name="Settings__version">Versionsname</string>
+    <string name="Settings__version">Version</string>
     <string name="Settings__about">Über</string>
-    <string name="Settings__vault_management">Safe-Verwaltung</string>
-    <string name="Settings__vault_location">Speicherort für Safes</string>
-    <string name="Settings__move_all_vaults">Alle Safes verschieben</string>
-    <string name="Settings__move_all_vaults_message">Klicken Sie hier um alle Safes an einen anderen Speicherort zu verschieben, z.B. zur externen SD-Karte</string>
+    <string name="Settings__vault_management">Tresorverwaltung</string>
+    <string name="Settings__vault_location">Speicherort der Tresore</string>
+    <string name="Settings__move_all_vaults">Alle Tresore verschieben</string>
+    <string name="Settings__move_all_vaults_message">Hier klicken, um alle Tresore an einen anderen Speicherort zu verschieben, (z.B. zur externen SD-Karte)</string>
     <string name="Settings__security">Sicherheit</string>
-    <string name="Settings__stealth_mode">Stealth-Modus</string>
-    <string name="Settings__stealth_mode_message">App im App-Launcher ausblenden</string>
-    <string name="Settings__stealth_mode_password">Stealth-Modus Passwort</string>
-    <string name="Settings__misc">Verschiedenes</string>
-    <string name="Settings__analytics">Verwendungsdaten senden</string>
-    <string name="Settings__analytics_message">Es werden nur Daten gesendet, die nicht mit den Safes in Verbindung stehen, wie z.B. das Gerätemodell, die Android Version, die Zahl der Appstarts usw.</string>
+    <string name="Settings__stealth_mode">Tarnmodus</string>
+    <string name="Settings__stealth_mode_message">App im App-Launcher verbergen</string>
+    <string name="Settings__stealth_mode_password">Passwort für Tarnmodus</string>
+    <string name="Settings__misc">Sonstiges</string>
+    <string name="Settings__analytics">Verwendungsdaten übermitteln</string>
+    <string name="Settings__analytics_message">Die gesendeten Daten sind ausschließlich Tresor-unabhängige Informationen wie das Gerätemodell, die Android-Version, die Zahl der Appaufrufe, usw.</string>
     <string name="Settings__stealth_explanation">Im Stealth-Modus ist das App Symbol im App Launcher verborgen. Der einzige Weg die App zu starten, ist den geheimen Code in der Telefon App zu wählen. Bitte geben Sie einen leicht zu merkenden Geheimcode ein:</string>
-    <string name="Settings__only_permium">Nur für spendende Benutzer verfügbar</string>
-    <string name="Settings__try_once_before_hide">Bevor das App Symbol verborgen wird, stellen Sie sicher, dass Sie es im Stealth-Modus starten können. Bitte tippen Sie den geheimen Code in der Telefon App ein:</string>
-    <string name="Settings__moving_vault">Verschieben. Bitte warten...</string>
-    <string name="Error__moving_vault">Fehler beim Verschieben des Safes</string>
-    <string name="Error__moving_vault_message">Ein Fehler ist aufgetreten, bitte versuchen Sie es später nochmals.</string>
+    <string name="Settings__only_permium">Nur für Spender verfügbar</string>
+    <string name="Settings__try_once_before_hide">Bevor das App-Symbol verborgen wird, stellen Sie bitte sicher, dass Sie den Tarnmodus starten können. Tippen Sie dazu den Geheimcode in Ihrer Telefon-App ein:</string>
+    <string name="Settings__moving_vault">Wird verschoben. Bitte warten...</string>
+    <string name="Error__moving_vault">Fehler beim Verschieben des Tresors</string>
+    <string name="Error__moving_vault_message">Ein Fehler ist aufgetreten. Bitte versuchen Sie es später erneut.</string>
     <string name="Settings__select_storage_title">Speicher wählen:</string>
 </resources>
