--- a/app/src/main/res/layout/activity_list_vault.xml
+++ b/app/src/main/res/layout/activity_list_vault.xml
@@ -16,11 +16,17 @@
   ~ specific language governing permissions and limitations
   ~ under the License.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ScrollView
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -107,6 +113,16 @@
             android:gravity="center_vertical"
             android:textColor="@color/white"
             android:textSize="@dimen/text_title_size" />
+
+    </FrameLayout>
     </FrameLayout>
 
-</RelativeLayout>
+    <com.doplgangr.secrecy.Views.DummyViews.NavDrawer.NavListView
+        android:id="@+id/left_drawer"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="start"
+        android:layout_marginEnd="@dimen/drawer_right_margin"
+        android:layout_marginRight="@dimen/drawer_right_margin"
+        android:background="@color/white" />
+</com.doplgangr.secrecy.Views.DummyViews.NavDrawer.DrawerLayout>
