--- a/app/src/main/res/menu/file_action.xml
+++ b/app/src/main/res/menu/file_action.xml
@@ -14,17 +14,17 @@
         android:icon="@drawable/ic_action_not_secure"
         android:orderInCategory="1"
         android:title="@string/action__decrypt"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_send"
         android:icon="@drawable/ic_action_send"
         android:orderInCategory="2"
         android:title="@string/action__delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_action_discard"
         android:orderInCategory="2"
         android:title="@string/action__delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
