--- a/app/src/main/res/menu/filelist.xml
+++ b/app/src/main/res/menu/filelist.xml
@@ -10,7 +10,7 @@
         android:title="@string/action__add_file"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_delete"
+        android:id="@+id/action_delete_vault"
         android:icon="@drawable/ic_action_discard"
         android:orderInCategory="2"
         android:title="@string/action__delete"
