--- a/app/src/main/res/menu/file_action.xml
+++ b/app/src/main/res/menu/file_action.xml
@@ -19,12 +19,12 @@
         android:id="@+id/action_send"
         android:icon="@drawable/ic_action_send"
         android:orderInCategory="2"
-        android:title="@string/action__delete"
+        android:title="@string/abc_shareactionprovider_share_with"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_action_discard"
-        android:orderInCategory="2"
+        android:orderInCategory="5"
         android:title="@string/action__delete"
         app:showAsAction="always" />
 </menu>
