New set of overflow buttons

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,9 +30,9 @@
     </style>
 
     <style name="MaterialOverFlow" parent="@style/Widget.AppCompat.Base.ActionButton.Overflow">
-    <item name="android:src">@drawable/ic_overflow</item>
+        <item name="android:src">@drawable/ic_action_overflow</item>
         <!-- Support library compatibility -->
-        <item name="src">@drawable/ic_overflow</item>
+        <item name="src">@drawable/ic_action_overflow</item>
     </style>
 
     <!-- ActionBar title text -->
@@ -62,7 +62,7 @@
     </style>
 
     <style name="OverFlow" parent="@style/Widget.AppCompat.Base.ActionButton.Overflow">
-        <item name="android:src">@drawable/ic_overflow</item>
+        <item name="android:src">@drawable/ic_action_overflow</item>
     </style>
 
 
